# minecraft

./: .ignore  CMakeLists.txt  compile
assets/: default.frag  default.vert
include/: shader.h
include/glad/: glad.h
include/minecraft/: camera.h  filesystem.h  shader.h
src/: camera.c  filesystem.c  glad.c  main.c  shader.c
